# entityx

./: .clang-format  .clang_complete  .gitattributes  .gitignore  .travis.yml  Android.mk  CHANGELOG.md  CHANGES.md  CMakeLists.txt  COPYING  CheckCXX11Features.cmake  CheckCXX11SharedPtr.cmake  CheckNeedGetPointer.cmake  Doxyfile  Makefile  Makefile.conf  README.md  appveyor.yml  entityx.hh  entityx.pc.in
.github/workflows/: default-ci.yaml
cmake/: FindEntityX.cmake  entityxConfig.cmake
cxx11/: c++11-test-cstdint.cpp  demo.cpp
entityx/: Benchmarks_test.cc  ComponentHandle.h  Components.cc  Components.h  Components_test.cc  Entity.cc  Entity.h  Entity.hh  EntityClass.h  Entity_test.cc  Event.cc  Event.h  Event_test.cc  Makefile  Manager.cc  Manager.h  Platform.h  System.cc  System.h  System_test.cc  World.cc  World.h  config.h  config.h.in  config.hh.in  entity_system_manager.hh  entityx.h  entityx.hh  packed.hh  quick.h  system.hh
entityx/help/: NonCopyable.h  Pool.cc  Pool.h  Pool_test.cc  Timer.cc  Timer.h  UIDGenerator.h
entityx/python/: PythonSystem.cc  PythonSystem.h  PythonSystem_test.cc  README.md  setup.py
entityx/python/entityx/: __init__.py
entityx/python/entityx/tests/: assign_test.py  constructor_test.py  create_entities_from_python_test.py  deep_subclass_test.py  event_emit_test.py  event_test.py  update_test.py
entityx/tags/: TagsComponent.cc  TagsComponent.h  TagsComponent_test.cc
examples/: CMakeLists.txt  example.cc
examples/qt/: CMakeLists.txt  Particle.qml  example.cc  main.qml  qml.qrc
examples/sfml/: CMakeLists.txt  example.cc
gtest-1.6.0/: CMakeLists.txt  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
gtest-1.6.0/build-aux/: config.guess  config.sub  ltmain.sh
gtest-1.6.0/cmake/: internal_utils.cmake
gtest-1.6.0/fused-src/gtest/: gtest-all.cc  gtest.h
gtest-1.6.0/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest.h  gtest_pred_impl.h
gtest-1.6.0/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest-port.h  gtest-string.h  gtest-tuple.h  gtest-tuple.h.pump  gtest-type-util.h  gtest-type-util.h.pump
gtest-1.6.0/m4/: libtool.m4  ltoptions.m4  ltversion.m4
gtest-1.6.0/samples/: sample10_unittest.cc  sample1_unittest.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample5_unittest.cc
gtest-1.6.0/scripts/: gen_gtest_pred_impl.py  pump.py
gtest-1.6.0/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
gtest-1.6.0/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-linked_ptr_test.cc  gtest-listener_test.cc  gtest-message_test.cc  gtest-options_test.cc  gtest-param-test_test.cc  gtest-param-test_test.h  gtest-port_test.cc  gtest-printers_test.cc  gtest_catch_exceptions_test.py  gtest_catch_exceptions_test_.cc  gtest_environment_test.cc  gtest_no_test_unittest.cc  gtest_output_test_.cc  gtest_output_test_golden_lin.txt  gtest_pred_impl_unittest.cc  gtest_repeat_test.cc  gtest_shuffle_test_.cc  gtest_stress_test.cc  gtest_test_utils.py  gtest_throw_on_failure_test_.cc  gtest_unittest.cc  gtest_xml_output_unittest.py  gtest_xml_output_unittest_.cc  gtest_xml_test_utils.py
gtest-1.6.0/xcode/gtest.xcodeproj/: project.pbxproj
scripts/: travis.sh
tests/: benchmarks_test.cc  entity_test.cc
