find_package(SFML 2)
if(SFML_FOUND)
    add_subdirectory(sfml)
else(SFML_FOUND)
    message("No SFML library found, not building sfml example")
endif(SFML_FOUND)

find_package(Qt5Gui)
if(Qt5Gui_FOUND)
    add_subdirectory(qt)
else(Qt5Gui_FOUND)
    message("No Qt5 Gui package found, not building Qt5 example")
endif(Qt5Gui_FOUND)
